Issue3536 (#3537)